après passage dans dataspell

--- a/titanic_2.ipynb
+++ b/titanic_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "id": "cd65d28d-7a26-4489-9fe1-440009256b14",
    "metadata": {},
    "outputs": [],
@@ -15,17 +15,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "c39d7b92-d710-49ee-9ffb-3758128a5b46",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import (auc,confusion_matrix,roc_auc_score,roc_curve)"
+    "from sklearn.metrics import auc,confusion_matrix,roc_auc_score,roc_curve"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "e5d9c03c-d544-4178-98bf-ef3a81fa14b5",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "7ca88876-e463-46b6-9f91-cbb72a4e7a69",
    "metadata": {},
    "outputs": [],
