après passage dans dataspell

--- a/titanic_2.ipynb
+++ b/titanic_2.ipynb
@@ -25,12 +25,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "e5d9c03c-d544-4178-98bf-ef3a81fa14b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from yellowbrick.classifier import (ConfusionMatrix, ROCAUC,)"
+    "from yellowbrick.classifier import ConfusionMatrix, ROCAUC"
    ]
   },
   {
