après passage dans dataspell

--- a/titanic_2.ipynb
+++ b/titanic_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "cd65d28d-7a26-4489-9fe1-440009256b14",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c39d7b92-d710-49ee-9ffb-3758128a5b46",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "e5d9c03c-d544-4178-98bf-ef3a81fa14b5",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7ca88876-e463-46b6-9f91-cbb72a4e7a69",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('biostats_titanic3.xls')\n"
+    "df = pd.read_excel('biostats_titanic3.xls') #fichier télécharger sur le site\n"
    ]
   },
   {
