après passage dans dataspell

--- a/titanic_2.ipynb
+++ b/titanic_2.ipynb
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "24809594-16a2-4873-82ae-e657ea919e7a",
    "metadata": {},
    "outputs": [],
@@ -391,12 +391,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "3daa8822-417a-4b9f-9ede-aa1781761be3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.3,random_state=42)"
+    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.3,random_state=42) #ici on split"
    ]
   },
   {
