après passage dans dataspell

--- a/titanic_2.ipynb
+++ b/titanic_2.ipynb
@@ -401,12 +401,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "d1b67cbd-2e5c-4ab7-888c-443b79733cc7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.preprocessing import OneHotEncoder #onehotencoder \n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.compose import make_column_transformer"
    ]
