--- a/titanic_2.ipynb
+++ b/titanic_2.ipynb
@@ -603,6 +603,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "id": "9f42eb85-571a-469b-9a63-3e33ab511d35",
