--- a/Les_differents_types_de_classification.ipynb
+++ b/Les_differents_types_de_classification.ipynb
@@ -396,7 +396,7 @@
     }
    ],
    "source": [
-    "# example of a multi-label classification task\n",
+    "# example of a multi-label classification taskb\n",
     "from sklearn.datasets import make_multilabel_classification\n",
     "# define dataset\n",
     "X, y = make_multilabel_classification(n_samples=1000, n_features=2, n_classes=3, n_labels=2, random_state=1)\n",
@@ -560,7 +560,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -574,7 +574,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.12"
   },
   "varInspector": {
    "cols": {
