Après passage dans dataspell

--- a/arbres de décisions.ipynb
+++ b/arbres de décisions.ipynb
@@ -900,11 +900,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "## avec la bibliothèque Seaborn"
+   ]
   },
   {
    "cell_type": "code",
